# automake

./: .travis.yml  LICENSE  README.md  build.sh  configure.ac
install/lib/: libtimer_1.0.la  libtimer_1.0.so.0.0.0
src/: Makefile.am  test_time.cpp
src/timer/: Makefile.am  timer.cpp  timer.h
